--- a/bailing_foley/index.css
+++ b/bailing_foley/index.css
@@ -1,3 +1,11 @@
+body {
+    background-color: orange;
+}
+
+body header, body article, body footer {
+    background-color: blue;
+}
+
 .content {
     width: 1024px;
     border-radius: 16px;
