--- a/bailing_foley/index.css
+++ b/bailing_foley/index.css
@@ -14,6 +14,11 @@ body header, body article, body footer {
     padding: 32px;
 }
 
+.content h1, .content h2 {
+    font-weight: bold;
+    text-align: center;
+}
+
 .a_paper::before, .a_code::before, .a_video::before {
     font-family: 'Segoe UI Emoji', 'Apple Color Emoji', 'Segoe UISymbol', 'Noto Color Emoji';
     padding-right: 1em;
