--- a/bailing_foley/index.css
+++ b/bailing_foley/index.css
@@ -28,6 +28,7 @@ body header, body article, body footer {
 }
 
 .content .img_illustration {
+    display: block;
     text-align: left;
     width: 768px;
 }
