--- a/bailing_foley/index.css
+++ b/bailing_foley/index.css
@@ -28,7 +28,7 @@ body header, body article, body footer {
 }
 
 .content .img_illustration {
-    display: block;
+    display: inline-block;
     text-align: left;
     width: 768px;
 }
