--- a/bailing_foley/index.css
+++ b/bailing_foley/index.css
@@ -55,7 +55,18 @@ body header, body article, body footer {
     content: '📽';
 }
 
-.row video {
-    height: 422px;
-    width: auto;
+.row .cell {
+    width: 49%;
+}
+
+.row .cell video {
+    position: absolute;
+    margin: auto;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    object-fit: fill;
+    width: 100%;
+    height: 100%;
 }
