--- a/bailing_foley/index.css
+++ b/bailing_foley/index.css
@@ -60,20 +60,18 @@ body header, body article, body footer {
     grid-template-columns: 1fr 1fr;
     grid-gap: 10px;
     width: 100%;
-    background-color: lightgreen;
 }
 
 .row .cell {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #f0f0f0;
-    border: 1px solid #ccc;
 }
 
 .row .cell video {
     width: 100%;
     height: 100%;
     object-fit: contain;
+    background-color: black;
 }
 
