--- a/bailing_foley/index.css
+++ b/bailing_foley/index.css
@@ -75,3 +75,7 @@ body header, body article, body footer {
     background-color: black;
 }
 
+.row .cell img {
+    width: 100%;
+    height: 100%;
+}
