--- a/bailing_foley/index.css
+++ b/bailing_foley/index.css
@@ -62,21 +62,34 @@ body header, body article, body footer {
     width: 100%;
 }
 
-.row .cell {
+.row_3 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 10px;
+    width: 100%;
+}
+
+.row .title, .row_3 .title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.row .cell, .row_3 .cell {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 432px;
 }
 
-.row .cell video {
+.row .cell video, .row_3 .cell video {
     width: 100%;
     height: 100%;
     object-fit: contain;
     background-color: black;
 }
 
-.row .cell img {
+.row .cell img, .row_3 .cell img {
     width: 100%;
     height: 100%;
 }
