--- a/svc/demo.css
+++ b/svc/demo.css
@@ -42,6 +42,8 @@ body {
     color: rgba(255, 255, 255, 0.9);
     font-size: 1.1rem;
     font-weight: 400;
+    text-align: center;
+    margin: 0 auto;
 }
 
 /* Main Content */
